# slack2tg

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: config.py  formatting.py  logging.py  main.py  routing.py  security.py  slack_parser.py  telegram_sender.py
tests/: conftest.py  test_formatting.py  test_slack_parser.py
