[project]
name = "slack2tg"
version = "0.1.0"
description = "Slack Incoming Webhook to Telegram Bot bridge (FastAPI + aiogram)"
readme = "README.md"
requires-python = ">=3.12"
authors = [
  { name = "slack2tg", email = "devnull@example.com" }
]
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "aiogram>=3.13.0",
  "pydantic>=2.7.0",
  "pydantic-settings>=2.2.0",
  "httpx>=0.27.0",
  "orjson>=3.10.0",
]

[tool.uv]
dev-dependencies = [
  "pytest>=8.3.0",
  "pytest-asyncio>=0.23.0",
  "anyio>=4.4.0",
  "httpx[http2]>=0.27.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]


